--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,3 +15,4 @@ jobs:
           hasURL: '${{ secrets.HASURL }}'
           token: '${{ secrets.TOKEN }}'
           entityID: '${{ secrets.ENTITYID }}'
+          payload: '{"rgb_color": [ 255, 0, 0 ]}'
